# brief09_assistant-veille-tech

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  deep-dive.md  first-sight.md  pyproject.toml
app/: config.py  main.py  schemas.py
app/data/: article.sql  article_store.py  articles_recorder.py  articles_repo.py  csv_exporter.py  migrate.py
app/indexing/: indexer.py
app/ingest/: arXiv_api.py  article_models.py  cleaning.py  ingester.py  models.py  rss_feed.py  scraper.py  tldr_scraper.py
app/rag/: llm.py  retrieval.py
app/review/: article_reviewer.py  review_orchestrator.py  reviewer.py  runner.py
app/runtime/: fresh_news.py
docs/: 2026-06-13-repo-state.md  2026-06-21-repo-state.md  SOURCES.md  SPECS.md  TODO.md  fonctionnement-fresh-news.md  fonctionnement-ingestion-arxiv.md  fonctionnement-scraping-tldr.md  git-pre-push-mirror-hook.md
docs/bugs/: azure-ai-endpoint-incompatible.md  backend-crash-feedparser-image-perimee.md  structured-output-langue-francais-par-defaut.md
docs/conception/: agent-enrichissement.md  arXiv-api.md  rss-feed-urls.md  tldr.tech-scrapping.md
docs/initial-repo-state/: chat-sequence.mmd
docs/notes/: logging-vs-typer-echo.md  matrice-review-blocker-et-scraping.md  retrieval-k.md  role-metadonnees-rag.md  statuts-et-cas-indexation.md  sync-metadonnees-chroma-post-review.md  validation-e2e-point-6.md
scripts/: ingest_cli.py
tests/: test_chroma_sync_stamp.py  test_cleaning_title.py  test_indexer_title_prefix.py  test_retrieval_dedupe.py  test_review_logic.py
web/: .gitignore  package-lock.json
(+29 files in other folders)
