[project]
name = "assistant-veille-tech"
version = "0.1.0"
description = "Nauda Palisse — assistant de veille technologique RAG."
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115,<0.120",
    "uvicorn[standard]>=0.30,<0.40",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4,<3",
    "httpx>=0.27,<0.30",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5,<6",
    "markdownify>=0.13,<0.20",
    "feedparser>=6.0,<7",
    "python-dotenv>=1,<2",
    "langchain>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-openai>=0.3,<0.4",
    "chromadb>=0.5,<0.6",
    "sentence-transformers>=3,<4",
    "torch>=2.4,<3",
    "typer>=0.12,<1",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<0.30",
    "pytest-cov>=5,<7",
    "respx>=0.21,<0.23",
    "ruff>=0.6,<0.10",
    "mypy>=1.10,<2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
